@@ -106,6 +106,7 @@ public:
 		DEF1_PITCHBEND = NUM_ELEMENT_PARAMS,
 		DEF1_MODWHEEL,
 		DEF1_PRESSURE,
+		DEF1_VELOCITY,
 		DEF1_NOTEOFF,
 
 		CHO1_WET,
