@@ -583,6 +583,16 @@
            </widget>
           </item>
           <item>
+           <widget class="drumkv1widget_spin" name="Def1VelocityKnob">
+            <property name="toolTip">
+             <string>DEF1 Velocity</string>
+            </property>
+            <property name="text">
+             <string>Velocity</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="drumkv1widget_combo" name="Def1NoteoffKnob">
             <property name="toolTip">
              <string>DEF1 Note Off</string>
