@@ -5,6 +5,8 @@ ChangeLog
 
 SVN TRUNK
 
+- Velocity sensitivity configuration control has been added.
+
 - Reset (all values to preset defaults) button has been added.
 
 
